# Hyperion

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.VSCodeCounter/2025-06-06_17-20-22/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-06_22-43-13/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/cpp/: generate_magic_num.c  main.cpp
src/cpp/core/: .gitignore  bitboard.cpp  bitboard.h  bitboard.hpp  constants.hpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  perft.cpp  position.cpp  position.hpp  test_bitboard.cpp  test_puzzle.cpp  test_zobrist_hashing.cpp  zobrist.cpp  zobrist.hpp
src/cpp/nn_inference/: nn_inference.hpp
src/cpp/search/: eval.cpp  eval.hpp  search.cpp  search.hpp  tt.cpp  tt.hpp
src/python/: nn.py
src/python/hyperion_nn/: __init__.py  config.py  config.py.bak
src/python/hyperion_nn/data_utils/: __init__.py  dataset.py  fen_parser.py  move_encoder.py  plot_loss.py  plot_validation_distribution.py
src/python/hyperion_nn/models/: __init__.py  resnet_cnn.py
src/python/hyperion_nn/training/: __init__.py  train.py
src/python/hyperion_nn/utils/: __init__.py  constants.py
src/python/tests/: README.txt  dataset_test.py  fen_parser_test.py  move_encoder_test.py
